# serializer version: 1
# name: test_all_entities[da_ac_ehs_01001][water_heater.heat_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 69,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 38,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'off',
        'eco',
        'heat_pump',
        'performance',
        'high_demand',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.heat_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 14>,
    'translation_key': 'water_heater',
    'unique_id': '4165c51e-bf6b-c5b6-fd53-127d6248754b_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ac_ehs_01001][water_heater.heat_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.AWAY_MODE: 'away_mode'>: 'off',
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 57,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat pump',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 69,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 38,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'off',
        'eco',
        'heat_pump',
        'performance',
        'high_demand',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 14>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 69,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 38,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 56,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.heat_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_sac_ehs_000001_sub][water_heater.eco_heating_system-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 40,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'off',
        'eco',
        'heat_pump',
        'high_demand',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.eco_heating_system',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 14>,
    'translation_key': 'water_heater',
    'unique_id': '1f98ebd0-ac48-d802-7f62-000001200100_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_sac_ehs_000001_sub][water_heater.eco_heating_system-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.AWAY_MODE: 'away_mode'>: 'off',
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 40.8,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Eco Heating System',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 40,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'off',
        'eco',
        'heat_pump',
        'high_demand',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 14>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 55,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 40,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 48,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.eco_heating_system',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_sac_ehs_000002_sub][water_heater.warmepumpe-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 40,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'off',
        'eco',
        'heat_pump',
        'performance',
        'high_demand',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.warmepumpe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 15>,
    'translation_key': 'water_heater',
    'unique_id': '3810e5ad-5351-d9f9-12ff-000001200000_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_sac_ehs_000002_sub][water_heater.warmepumpe-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.AWAY_MODE: 'away_mode'>: 'off',
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 49.6,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wärmepumpe',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 40,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'off',
        'eco',
        'heat_pump',
        'performance',
        'high_demand',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'heat_pump',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 15>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 57,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 40,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 52,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.warmepumpe',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_pump',
  })
# ---
